# knowledge_graph_builder

./: .gitignore  docker-compose.neo4j.yml  pyproject.toml
data/test_qa/: hub_n_spoke.json  personal.json  realistic.json  sequence.json  versus.json
data_parser/: main.py
notes/: 1.md  algo.md  datasets.md  ideas.md  main.md  применимость.md
notes/.ai_meta/: index.faiss  metadata.json
notes/.obsidian/: workspace.json
paper/: main.tex  references.bib
paper/.aux/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.toc  main.xdv
paper/text/: 0_Введение.tex  1.1_PKM.tex  1.2_RAG.tex  1.3_Готовые_Решения.tex  1.4_Оценка_Качества.tex  1_ref.txt  2.1_Архитектура.tex  2.1_Построение_Графа.tex  2.2_GraphRAG.tex  2.2_Реализация.tex  2.3_Данные.tex  3_Данные.tex  4_Эксперименты.tex  6_Литература.tex  7_Приложение.tex
results/: classification_results.jsonl  ragas_graphrag.json
results/ragas_neo4j/: hub_n_spoke.json  realistic.json
scripts/: build_neo4j_graph.py
src/: __init__.py  config.py  embedding_service.py  graph_builder.py  llm_service.py  main.py  metadata_manager.py  templates.py  vault_manager.py  vector_store.py
src/dataset_parser/: apply_classification.py  config.py  extract_contexts.py  main.py  process_links.py
src/evaluator/: main.py  predict.py  retrieval_evaluator.py
src/graphrag/: __init__.py  base.py  config.py  pipeline.py  reference.py  typed.py
src/kg_builder/: config.py  embedding_service.py  export_service.py  graph_builder.py  main.py  metadata_manager.py  models.py  retrieval.py  vault_manager.py  vector_store.py
(+377 files in other folders)
