[project]
name = "diploma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "json-repair>=0.55.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=1.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "pytorch-triton-rocm==3.5.1; sys_platform == 'linux'",
    "wikipedia-api>=0.9.0",
    "llama-cpp-python>=0.3.16",
    "langchain-cerebras>=0.8.2",
    "spacy>=3.8.11",
]


[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }

[tool.basedpyright]
typeCheckingMode = "off"
